--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "form-data": "^2.5.0",
     "pg": "^7.12.1",
     "ringcentral-chatbot": "^1.2.0",
     "serverless-http": "^2.1.0"
