--- a/serverless.yml
+++ b/serverless.yml
@@ -26,6 +26,7 @@ provider:
     Owner: Tyler Liu
     Environment: temp
     Name: dre-glip-forward-chatbot
+  stackTags: ${self:provider.tags}
 
 package:
   exclude:
