--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "dev": "node -r dotenv-override-true/config express.js",
-    "deploy": "sls deploy"
+    "dev": "ts-node -r dotenv-override-true/config express.ts",
+    "deploy": "tsc && sls deploy"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -14,11 +14,14 @@
     "serverless-http": "^2.7.0"
   },
   "devDependencies": {
+    "@types/node": "^15.12.5",
     "dotenv-override-true": "^6.2.2",
+    "gts": "^3.1.0",
     "ngrok": "^4.0.1",
     "serverless": "^2.49.0",
     "sqlite3": "^5.0.2",
-    "standard": "^16.0.3",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4",
     "yarn-upgrade-all": "^0.5.4"
   }
 }
