--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
-    "outDir": "."
+    "outDir": ".",
+    "esModuleInterop": true,
   },
   "include": [
-    "src/**/*.ts"
+    "./**/*.ts"
   ]
 }
