--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
-    "outDir": ".",
+    "outDir": "dist",
     "esModuleInterop": true,
   },
   "include": [
-    "./**/*.ts"
+    "src/**/*.ts"
   ]
 }
