--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^0.19.0",
     "form-data": "^3.0.0",
     "pg": "^7.14.0",
-    "ringcentral-chatbot": "^1.2.5",
+    "ringcentral-chatbot": "1.5.0",
     "serverless-http": "^2.3.0"
   },
   "devDependencies": {
