--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "pg": "^7.14.0",
-    "ringcentral-chatbot": "1.8.8",
+    "ringcentral-chatbot": "^1.8.9",
     "serverless-http": "^2.3.0"
   },
   "devDependencies": {
